--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+/node_modules
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
+/.idea
+/.vagrant
+Homestead.json
+Homestead.yaml
+npm-debug.log
 .env
-.database.php
-ipn.php
