--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": ">=5.6.4",
         "laravel/framework": "5.4.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "nwidart/laravel-modules": "^1.27"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
