--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,9 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "artem-schander/l5-modular": "^1.4",
         "laravel/framework": "5.4.*",
-        "laravel/tinker": "~1.0",
-        "nwidart/laravel-modules": "^1.27"
+        "laravel/tinker": "~1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -20,8 +20,7 @@
             "database"
         ],
         "psr-4": {
-            "App\\": "app/",
-            "Modules\\": "Modules/"
+            "App\\": "app/"
         }
     },
     "autoload-dev": {
